# obsidian-llm-tool-use

./: .gitignore  answer_using_notes_poc.ipynb  ask_notes.py  chatgpt_sys_prompt.md  chatgpt_sys_prompt.txt  cli_paste_to_note.py  cli_text_to_note.py  cli_web_to_note.py  dspy_ollama.py  grpo_context.txt  main.py  ollama.py  pyproject.toml  readme.md  sample_note.md  small_sys_prompt.txt  test_stuff.ipynb  test_web_tool.ipynb  text_to_note.py  web_to_note.py
data/: load_data.ipynb
data/faiss/: capital_index.faiss  capital_meta.pkl  notes_index.faiss  notes_meta.pkl
data/samples/: ask_notes.json
dspy_modules/: callout_gen.py  intro_to_dspy.ipynb  intro_to_dspy.md  note_gen.py  run.py  sentiment.json  tools.py
notes/: callouts.md  cursor CTO Interview.md
samples/context_to_note/: test.yaml
tools/: brave_mc_run.sh  brave_search.py  md_files.py
